2005/01/07 22:27 (+0200) kaffeetisch

	* examples/cellrenderer_data.pl,
	examples/cellrenderer_spinbutton.pl, examples/customrenderer.pl:
	Change package names to use custom prefixes, to avoid putting
	stuff in the Gtk2 namespace.

	* t/PangoFont.t, xs/PangoFont.xs: Bind and test
	pango_font_description_set_absolute_size and
	pango_font_description_get_size_is_absolute.

	* t/PangoLayout.t, xs/PangoLayout.xs: Bind and test
	pango_layout_get_font_description.

2005/01/05 23:24 (-0400) muppetman

	* pm/TestHelper.pm, t/00.Gtk2.t, t/01.GtkWindow.t,
	t/GtkCellRenderer.t, t/GtkFileChooser.t, t/GtkIconView.t,
	t/GtkListStore.t, t/GtkNotebook.t, t/GtkSimpleList.t,
	t/GtkTreeSelection.t, t/GtkTreeView.t: add, document, and use
	TestHelper functions run_main, ok_idle, and is_idle.

2005/01/05 23:16 (-0400) muppetman

	* xs/GtkItemFactory.xs: an important part of one of kaffee's last
	patchsets didn't make it in -- make gtk2perl_translate_func() and
	gtk2perl_translate_func_create() no longer static, so they can
	be used from GtkActionGroup.xs.

2005/01/02 17:44 (+0100) kaffeetisch

	* t/GdkRgb.t, xs/GdkRgb.xs: Bind and test
	gdk_rgb_colormap_ditherable.

	* t/GtkActionGroup.t, xs/GtkActionGroup.xs: Bind and test
	gtk_action_group_set_translation_domain,
	gtk_action_group_set_translate_func, and
	gtk_action_group_translate_string.

	* t/GtkDialog.t, xs/GtkDialog.xs: Bind and test
	gtk_alternative_dialog_button_order.

	* t/GtkClipboard.t, t/GtkSelection.t, xs/GtkClipboard.xs,
	xs/GtkSelection.xs: Bind and test gtk_clipboard_set_image,
	gtk_clipboard_wait_for_image,
	gtk_clipboard_wait_is_image_available,
	gtk_clipboard_request_image, gtk_clipboard_set_can_store,
	gtk_clipboard_store, gtk_clipboard_wait_is_target_available,
	gtk_target_list_add_text_targets,
	gtk_target_list_add_image_targets,
	gtk_target_list_add_uri_targets, gtk_selection_data_set_pixbuf,
	gtk_selection_data_get_pixbuf, gtk_selection_data_set_uris,
	gtk_selection_data_get_uris, and